feat: filter engine
Allows filtering inflight data

--- a/filter.yaml
+++ b/filter.yaml
@@ -1,4 +1,23 @@
+# Make bools to bools
 - match:
-    value: Ein
+    value: Ein|Aus
   set:
-    value: 1
+    value: '{{$v := -1}} {{if (eq . "Ein")}} {{$v = 1}} {{else}} {{$v = 0}} {{end}} {{$d := dict "value" $v}} {{toJson $d}}' 
+
+# Split degree celsius
+- match:
+    value: °
+  set:
+    value: '{{$v := split "°" .}} {{$d := dict "value" $v._0 "unit" $v._1}} {{toJson $d}}'
+
+# Split units
+- match:
+    value: '\sK|\sbar|\sl\/h|\skWh'
+  set:
+    value: '{{$v := split " " .}} {{$d := dict "value" $v._0 "unit" $v._1}} {{toJson $d}}'
+
+# Convert unmatched ones to json as well
+- match:
+    value: ".?"
+  set:
+    value: '{{$d := dict "value" .}} {{toJson $d}}'
