--- a/filter.yaml
+++ b/filter.yaml
@@ -2,7 +2,8 @@
 - match:
     value: Ein|Aus
   set:
-    value: '{{$v := -1}} {{if (eq . "Ein")}} {{$v = 1}} {{else}} {{$v = 0}} {{end}} {{$d := dict "value" $v}} {{toJson $d}}' 
+    value: '{{$v := "-1"}} {{if (eq . "Ein")}} {{$v = "1"}} {{else}} {{$v = "0"}} {{end}} {{$d := dict "value" $v}} {{toJson $d}}' 
+    key: '{{if regexMatch "_state" . }} {{.}} {{else}} {{.}}_state {{end}}'
 
 # Split degree celsius
 - match:
