feat(log): mute messages
Adds the ability to mute messages selected by regEx

--- a/lux.yaml
+++ b/lux.yaml
@@ -1,5 +1,8 @@
-verbose: true
 address: 172.21.20.103
+verbose: false
+mutes:
+  - domain: "ablaufzeiten"
+    field: "wp-seit|ssp-zeit"
 filters:
   # Make bools to bools
   - match:
